--- a/src/modules/trader/components/trader-container/trader-detail-container/trader-detail/trader-info/trader-buttons/trader-buttons.scss
+++ b/src/modules/trader/components/trader-container/trader-detail-container/trader-detail/trader-info/trader-buttons/trader-buttons.scss
@@ -7,9 +7,10 @@
 }
 
 .trader-button {
-  margin: 1rem;
+  margin: 0.5rem;
   min-width: 12rem;
   min-height: 3rem;
+  line-height: 2.1;
   @include media-breakpoint-phone() {
     margin: 0.5rem;
     min-width: 7rem;
