--- a/src/shared/components/form/input-file/input-file.scss
+++ b/src/shared/components/form/input-file/input-file.scss
@@ -1,14 +1,14 @@
 @import "styles/_colors.scss";
 
 .input-file {
-  position: relative;
-  padding: 2rem 1rem;
-  border: 1px solid $border-color;
-  border-radius: 4px;
 }
 
 .input-file__avatar {
+  position: relative;
   text-align: center;
+  padding: 2rem 1rem;
+  border: 1px solid $border-color;
+  border-radius: 4px;
 }
 
 .input-file__avatar img {
@@ -37,9 +37,9 @@
 .input-file__dropzone {
   position: absolute;
   top: 0;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
 }
 
 .dropzone {
@@ -51,6 +51,7 @@
 }
 
 .dropzone--active {
+  width: 100%;
   border: 5px dashed $border-color;
   box-sizing: border-box;
   background: rgba(255, 255, 255, 0.9);
