--- a/src/modules/program-settings/components/program-settings-create-container/program-settings-create-form/program-settings-create-form.scss
+++ b/src/modules/program-settings/components/program-settings-create-container/program-settings-create-form/program-settings-create-form.scss
@@ -25,3 +25,13 @@
 .create-program-form__program-image {
   max-width: 200px;
 }
+
+.create-program-form__couple-field {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  div {
+    flex: 1;
+    max-width: 45%;
+  }
+}
