--- a/src/shared/components/form/gv-datepicker/gv-datepicker.scss
+++ b/src/shared/components/form/gv-datepicker/gv-datepicker.scss
@@ -8,6 +8,10 @@ $datepicker__header-color: $text-color;
 
 @import "node_modules/react-datepicker/src/stylesheets/datepicker.scss";
 
+.react-datepicker-popper {
+  z-index: 2;
+}
+
 .gv-datepicker {
   margin-bottom: 1rem;
 }
