--- a/src/modules/program-settings/components/program-settings-create-container/program-settings-create-form/program-settings-create-form.scss
+++ b/src/modules/program-settings/components/program-settings-create-container/program-settings-create-form/program-settings-create-form.scss
@@ -30,7 +30,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  div {
+  & > div {
     flex: 1;
     max-width: 45%;
   }
