Add dashboard page

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,6 +9,7 @@ $text-color: $main-color;
 $text-sub-color: #28768d;
 $text-color-light: $alternate-color;
 
+$box-shadow-color: rgba(194, 207, 212, 0.32);
 $box-shadow-primary-color: rgba(22, 183, 173, 0.28);
 $box-shadow-danger-color: rgba(224, 4, 99, 0.28);
 $box-shadow-warning-color: rgba(249, 243, 221, 0.28);
