--- a/src/modules/dashboard/components/dashboard/dashboard-info-container/dashboard-statistic/dashboard-statistic.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard-info-container/dashboard-statistic/dashboard-statistic.scss
@@ -1,4 +1,5 @@
 @import "styles/_colors.scss";
+@import "styles/_breakpoint.scss";
 
 .dashboard-statistic {
   display: flex;
@@ -9,8 +10,10 @@
 .dashboard-card {
   flex: 1 1;
   margin: 2rem;
+  padding: 1rem;
   border-color: white;
   box-shadow: 0 70px 70px 0 $box-shadow-color;
+  min-width: 20%;
 
   &:first-of-type {
     margin-left: 0;
@@ -18,11 +21,23 @@
   &:last-of-type {
     margin-right: 0;
   }
+
+  @include media-breakpoint-phone() {
+    min-width: 300px;
+    &:first-of-type {
+      min-width: 300px;
+      margin-left: 2rem;
+    }
+    &:last-of-type {
+      margin-right: 2rem;
+    }
+  }
 }
 
 .dashboard-card__body {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
 }
 
