--- a/src/modules/dashboard/components/dashboard/dashboard.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard.scss
@@ -1,7 +1,13 @@
+@import "styles/_breakpoint.scss";
+
 .dashboard {
-  margin: 3rem;
+  margin: 4rem;
+  @include media-breakpoint-phone() {
+    margin: 2rem;
+  }
 }
 
 .dashboard-subheader {
   font-size: 2rem;
+  font-family: "NeuzeitGroBol";
 }
