Update dashboard filtering

--- a/src/modules/dashboard/components/dashboard/dashboard-filterable-program-list/dashboard-program-list-tabs-container/dashboard-program-list-tabs/dashboard-program-list-tabs.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard-filterable-program-list/dashboard-program-list-tabs-container/dashboard-program-list-tabs/dashboard-program-list-tabs.scss
@@ -1,7 +1,10 @@
 @import "styles/_colors.scss";
 
 .dashboard-program-list-tabs {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .dashboard-program-tab {
