--- a/src/modules/dashboard/components/dashboard/dashboard-info-container/dashboard-charts/dashboard-charts.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard-info-container/dashboard-charts/dashboard-charts.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 400px;
+  min-height: 400px;
 }
 
 .dashboard-charts__chart {
