--- a/src/modules/program-settings/components/program-settings-create-container/program-settings-create-form/program-settings-create-form.scss
+++ b/src/modules/program-settings/components/program-settings-create-container/program-settings-create-form/program-settings-create-form.scss
@@ -36,7 +36,8 @@
 }
 
 .create-program-form__program-image {
-  max-width: 200px;
+  max-width: 300px;
+  min-height: 400px;
   @include media-breakpoint-phone() {
     max-width: 100%;
   }
