Open program detail by clicking on program name

--- a/src/modules/dashboard/components/dashboard/dashboard-filterable-program-list/dashboard-program-list-container/dashboard-program-list/dashboard-program/dashboard-program.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard-filterable-program-list/dashboard-program-list-container/dashboard-program-list/dashboard-program/dashboard-program.scss
@@ -21,9 +21,13 @@
 .dashboard-program-card__title {
   font-size: 1.5rem;
   max-width: 100%;
+  color: $text-color;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .dashboard-program-card__description {
