--- a/src/modules/dashboard/components/dashboard/dashboard-filterable-program-list/dashboard-program-list-container/dashboard-program-list/dashboard-program/dp-buttons/dp-buttons.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard-filterable-program-list/dashboard-program-list-container/dashboard-program-list/dashboard-program/dp-buttons/dp-buttons.scss
@@ -7,8 +7,8 @@
 }
 
 .dp-button {
-  margin: 1rem;
-  min-width: 8rem;
+  margin: 1rem 0.5rem;
+  min-width: 7rem;
   min-height: 2rem;
   line-height: 2.1;
   @include media-breakpoint-phone() {
