Update input file defaults

--- a/src/shared/components/form/input-file/input-file.scss
+++ b/src/shared/components/form/input-file/input-file.scss
@@ -44,7 +44,8 @@
   padding: 1rem;
 
   .cropper-modal {
-    background-color: transparent;
+    background-color: white;
+    opacity: 0.9;
   }
 }
 
