--- a/src/shared/components/form/input-file/input-file.scss
+++ b/src/shared/components/form/input-file/input-file.scss
@@ -8,8 +8,8 @@
 }
 
 .input-file__avatar img {
-  min-width: 200px;
-  min-height: 200px;
+  min-width: 150px;
+  min-height: 150px;
   max-width: 200px;
   max-height: 200px;
 }
@@ -44,9 +44,16 @@
     background-color: white;
     opacity: 0.9;
   }
+
+  &.dropzone--active {
+    .dropzone-helper {
+      display: block;
+    }
+  }
 }
 
-.dropzone--active {
+.dropzone-helper {
+  display: none;
   position: absolute;
   top: 0;
   right: 0;
