--- a/src/modules/programs/components/program-filterable-list/program-list-container/program-list/program-item/pi-statistic/pi-statisctic.scss
+++ b/src/modules/programs/components/program-filterable-list/program-list-container/program-list/program-item/pi-statistic/pi-statisctic.scss
@@ -23,7 +23,7 @@
   }
 }
 
-.tis-item {
+.pis-item {
   min-width: 15%;
   max-width: 15%;
   height: 4.5rem;
@@ -63,7 +63,7 @@
   }
 }
 
-.tis-item__value {
+.pis-item__value {
   font-size: 1.7rem;
   font-family: "NeuzeitGroLig";
   @include media-breakpoint-desktop() {
@@ -71,7 +71,7 @@
   }
 }
 
-.tis-item__label {
+.pis-item__label {
   color: $text-sub-color;
   font-size: 0.9rem;
   line-height: 0.5;
