--- a/src/modules/program/components/program-container/program-detail-container/program-detail/program-buttons/program-buttons.scss
+++ b/src/modules/program/components/program-container/program-detail-container/program-detail/program-buttons/program-buttons.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 1rem;
 }
 
 .program-button {
@@ -15,5 +16,12 @@
     margin: 0.5rem;
     min-width: 7rem;
     min-height: initial;
+  }
+}
+.program-info__buttons {
+  flex: 1;
+  min-width: 430px;
+  @include media-breakpoint-phone() {
+    min-width: 100%;
   }
 }
