--- a/src/modules/program/components/program-container/program-detail-container/program-detail/program-info/program-info.scss
+++ b/src/modules/program/components/program-container/program-detail-container/program-detail/program-info/program-info.scss
@@ -9,19 +9,15 @@
 
 .program-info__avatar {
   flex: 1;
+  max-width: 200px;
   margin: 0 1rem;
+  @include media-breakpoint-phone() {
+    max-width: 100px;
+  }
 }
 
 .program-info__name {
-  flex: 5;
-}
-
-.program-info__buttons {
   flex: 1;
-  min-width: 430px;
-  @include media-breakpoint-phone() {
-    min-width: 100%;
-  }
 }
 
 .program-info__title {
@@ -30,7 +26,7 @@
   max-width: 20em;
   overflow: hidden;
   @include media-breakpoint-phone() {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
