Add tooltip to Program Settings

--- a/src/shared/components/form/gv-select/gv-select.scss
+++ b/src/shared/components/form/gv-select/gv-select.scss
@@ -114,3 +114,9 @@ $select-menu-max-height: 210px;
     }
   }
 }
+
+.gv-select__help {
+  position: absolute;
+  left: -22px;
+  color: lighten($color: $main-color, $amount: 10%);
+}
