--- a/src/shared/components/form/gv-datepicker/gv-datepicker.scss
+++ b/src/shared/components/form/gv-datepicker/gv-datepicker.scss
@@ -116,6 +116,12 @@ $datepicker__header-color: $text-color;
   }
 }
 
+.gv-datepicker__help {
+  position: absolute;
+  left: -22px;
+  color: lighten($color: $main-color, $amount: 10%);
+}
+
 .react-datepicker__time-list {
   padding: 0.5rem;
 }
