--- a/src/shared/components/form/input-text/input-text.scss
+++ b/src/shared/components/form/input-text/input-text.scss
@@ -127,3 +127,10 @@
   color: $danger-color;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
+
+.input-text__help {
+  position: absolute;
+  top: 38px;
+  left: -22px;
+  color: lighten($color: $main-color, $amount: 10%);
+}
