--- a/src/components/program-item/pi-info/pi-info.scss
+++ b/src/components/program-item/pi-info/pi-info.scss
@@ -57,7 +57,7 @@
   font-size: 0.9em;
   color: $text-sub-color;
   line-height: 1.2;
-  margin: 1rem 0;
+  //margin: 1rem 0;
   height: 4rem;
   width: 225px;
   overflow: hidden;
