--- a/src/modules/programs/components/program-filterable-list/program-list-container/program-list/program-item/program-item.scss
+++ b/src/modules/programs/components/program-filterable-list/program-list-container/program-list/program-item/program-item.scss
@@ -1,15 +1,15 @@
-@import "styles/_colors.scss";
-@import "styles/_breakpoint.scss";
+// @import "styles/_colors.scss";
+// @import "styles/_breakpoint.scss";
 
-.program-item {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 190px;
-  padding: 1rem 2rem;
-  border-bottom: 1px solid $border-color;
-  @include media-breakpoint-phone() {
-    padding: 0.5rem;
-  }
-}
+// .program-item {
+//   display: flex;
+//   flex-wrap: wrap;
+//   align-items: center;
+//   justify-content: space-between;
+//   min-height: 190px;
+//   padding: 1rem 2rem;
+//   border-bottom: 1px solid $border-color;
+//   @include media-breakpoint-phone() {
+//     padding: 0.5rem;
+//   }
+// }
