--- a/src/components/program-item/pi-info/pi-info.scss
+++ b/src/components/program-item/pi-info/pi-info.scss
@@ -3,12 +3,8 @@
 
 .pi-info {
   display: flex;
-  order: 1;
-  flex-wrap: wrap;
   align-items: center;
-  flex: 1 1 28%;
-  max-width: 28%;
-  min-width: 300px;
+  padding: 1rem;
 
   @include media-breakpoint-desktop() {
     max-width: 380px;
@@ -16,24 +12,27 @@
 }
 
 .pi-info__order {
-  font-size: 1.4rem;
+  font-size: 1.125rem;
+  margin-right: 1rem;
   @include media-breakpoint-phone() {
     font-size: 1rem;
   }
 }
 
-.pi-info__image {
-  position: relative;
-  width: 100px;
-  margin: 0 0.5rem;
-  text-align: center;
-  @include media-breakpoint-phone() {
-    margin: 0.5rem;
-  }
-}
+// .pi-info__image {
+//   position: relative;
+//   width: 100px;
+//   margin: 0 0.5rem;
+//   text-align: center;
+//   @include media-breakpoint-phone() {
+//     margin: 0.5rem;
+//     width: 62px;
+//   }
+// }
 
 .pi-info__name {
-  max-width: 14rem;
+  width: 100%;
+  flex: 1;
 }
 
 .pi-name {
@@ -43,21 +42,25 @@
 }
 
 .pi-name__title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  position: relative;
+}
+
+.pi-name__link {
   font-size: 1.6rem;
+  line-height: 1.1;
   color: $text-color;
   max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
-  &:hover {
-    text-decoration: none;
-  }
 }
 
 .pi-name__description {
   font-size: 0.9em;
   color: $text-sub-color;
   line-height: 1.2;
-  //margin: 1rem 0;
   height: 4rem;
   width: 225px;
   overflow: hidden;
