--- a/src/components/program-item/program-item.scss
+++ b/src/components/program-item/program-item.scss
@@ -1,6 +1,9 @@
 @import "styles/_colors.scss";
 @import "styles/_breakpoint.scss";
 
+$avatar-size: 112px;
+$mobile-avatar-size: 48px;
+
 .program-item {
   display: flex;
   flex-direction: row;
@@ -21,6 +24,8 @@
   }
 
   &__avatar {
+    height: $mobile-avatar-size;
+    width: $mobile-avatar-size;
     margin-right: 0.5rem;
   }
 
@@ -31,7 +36,8 @@
   }
 
   &__info {
-    width: calc(70% - 2rem);
+    flex-grow: 1;
+    width: calc(70% - 148px);
   }
 
   &__title {
@@ -57,7 +63,7 @@
   }
 
   &__button {
-    // width: calc(50% - 0.5rem);
+    width: 100%;
   }
 
   &__buttons {
@@ -72,12 +78,10 @@
   }
 
   @include breakpoint-tablet() {
+    border: 1px solid $border-color;
+
     &__bookmark {
       margin-right: 1rem;
-    }
-
-    &__info {
-      width: calc(50% - 2rem);
     }
 
     &__chart {
@@ -103,8 +107,6 @@
 
   @include breakpoint-desktop() {
     position: relative;
-    border-left: 1px solid $border-color;
-    border-right: 1px solid $border-color;
     align-items: flex-start;
 
     &__hr {
@@ -126,6 +128,8 @@
     }
 
     &__avatar {
+      width: $avatar-size;
+      height: $avatar-size;
       margin-right: 1rem;
     }
 
@@ -133,7 +137,6 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: calc(100% - 112px - 99px - 3rem);
       margin-right: 1rem;
     }
 
