--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -5,7 +5,7 @@
 }
 
 .app__sidebar {
-  flex: 1 1 65px;
+  flex: 1 0 65px;
   max-width: 65px;
   @include media-breakpoint-phone() {
     display: none;
@@ -14,6 +14,7 @@
 
 .app__body {
   flex: 1 1 100%;
+  width: calc(100% - 65px);
   @include media-breakpoint-phone() {
     max-width: 100%;
   }
