--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,6 +10,7 @@
   border-right: 1px solid $main-color;
   box-shadow: 1px 0 4px 0 $main-color;
   height: calc(100vh - 68px);
+  z-index: 1;
 }
 
 .sidebar__item {
