--- a/src/modules/dashboard/components/dashboard/dashboard-info-container/dashboard-description/dashboard-description.scss
+++ b/src/modules/dashboard/components/dashboard/dashboard-info-container/dashboard-description/dashboard-description.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .dashboard-description__buttons {
