--- a/src/components/program-avatar/program-avatar.scss
+++ b/src/components/program-avatar/program-avatar.scss
@@ -1,14 +1,48 @@
 @import "styles/_colors.scss";
 @import "styles/_breakpoint.scss";
 
+$avatar-size: 112px;
+$tablet-avatar-size: 48px;
+$mobile-avatar-size: 61px;
+
 .program-avatar {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  height: $avatar-size;
+  width: $avatar-size;
   overflow: hidden;
+
+  &__label {
+    position: absolute;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 28px;
+    width: 28px;
+
+    &--tournament {
+      top: 0;
+      left: 0;
+      color: $main-color;
+      background-color: white;
+    }
+
+    &--level {
+      bottom: 0;
+      right: 0;
+      color: white;
+      background-color: $alternate-color;
+    }
+
+    @include media-breakpoint-tablet() {
+      font-size: 0.8rem;
+      height: 16px;
+      width: 16px;
+    }
+  }
 
   &__image {
     max-width: 100%;
@@ -28,5 +62,15 @@
       top: 0;
       left: 0;
     }
+  }
+
+  @include media-breakpoint-tablet() {
+    height: $tablet-avatar-size;
+    width: $tablet-avatar-size;
+  }
+
+  @include media-breakpoint-phone() {
+    height: $mobile-avatar-size;
+    width: $mobile-avatar-size;
   }
 }
