--- a/src/modules/program-deposit/components/program-deposit-container/program-deposit/program-deposit.scss
+++ b/src/modules/program-deposit/components/program-deposit-container/program-deposit/program-deposit.scss
@@ -13,8 +13,8 @@
 }
 
 .program-deposit__info-cell {
-  flex: 1 1 32%;
-  max-width: 32%;
+  flex: 1;
+  max-width: 100%;
   text-align: center;
 }
 
