--- a/src/modules/program-withdraw/components/program-withdraw-container/program-withdraw/program-withdraw.scss
+++ b/src/modules/program-withdraw/components/program-withdraw-container/program-withdraw/program-withdraw.scss
@@ -12,8 +12,8 @@
 }
 
 .program-withdraw__info-cell {
-  flex: 1 1 32%;
-  max-width: 32%;
+  flex: 1;
+  max-width: 100%;
   text-align: center;
 }
 
