--- a/src/components/mobile-nav/mobile-nav.scss
+++ b/src/components/mobile-nav/mobile-nav.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.mobile-navigation {
+.navigation.mobile-navigation {
   flex-direction: column;
   .navigation__item {
     border: none;
