--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -2,22 +2,12 @@
 
 .app__main {
   display: flex;
-  @include media-breakpoint-tablet {
+  @include media-breakpoint-phone {
     height: calc(100% - 68px);
-  }
-}
-
-.app__sidebar {
-  flex: 1 0 65px;
-  max-width: 65px;
-  @include media-breakpoint-phone() {
-    display: none;
+    margin-top: 68px;
   }
 }
 
 .app__body {
   flex: 1 1 100%;
-  @include media-breakpoint-phone() {
-    max-width: 100%;
-  }
 }
