--- a/src/modules/programs/components/program-filterable-list/program-filterable-list.scss
+++ b/src/modules/programs/components/program-filterable-list/program-filterable-list.scss
@@ -1,4 +1,5 @@
 @import "styles/_breakpoint.scss";
+@import "styles/_constants.scss";
 
 .program-filterable-list {
   display: flex;
@@ -11,13 +12,12 @@
   margin: 0 auto;
   &:not(:last-child) {
     @include media-breakpoint-desktop() {
-      height: calc(100vh - 72px);
+      height: calc(100vh - $header-height);
       overflow: hidden;
     }
 
     @include media-breakpoint-phone() {
       display: none;
-      height: calc(100vh - 89px);
     }
   }
 }
@@ -29,5 +29,6 @@
   justify-content: space-between;
   @include media-breakpoint-phone() {
     flex-direction: column;
+    margin: 0.5rem;
   }
 }
