--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,7 +6,8 @@
   top: 0;
   z-index: 1020;
   @include media-breakpoint-phone() {
-    position: initial;
+    position: fixed;
+    width: 100%;
   }
 }
 
@@ -14,12 +15,53 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 1rem 2rem;
   background: $main-color;
   border-bottom: 1px solid $main-color;
   box-shadow: 0 1px 4px 0 rgba(24, 79, 97, 0.86);
-  @include media-breakpoint-phone() {
-    padding: 0.5rem 1rem;
+  @include media-breakpoint-tablet() {
+    padding: 1rem;
+  }
+
+  &__navigation {
+    flex: 1;
+    @include media-breakpoint-tablet() {
+      display: none;
+    }
+  }
+
+  &__nav-button {
+    display: none;
+    @include media-breakpoint-tablet() {
+      display: block;
+      z-index: 1;
+    }
+  }
+  &__logo {
+    margin-right: 2rem;
+    @include media-breakpoint-tablet() {
+      margin: 0;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 0;
+    }
+  }
+  &__auth {
+    @include media-breakpoint-tablet() {
+      display: none;
+    }
+  }
+
+  &__filtering {
+    @include media-breakpoint-tablet() {
+      z-index: 1;
+    }
   }
 }
 
@@ -53,36 +95,78 @@
   }
 }
 
+.h-button {
+  height: 35px;
+  width: 35px;
+  svg path {
+    fill: $main-color;
+  }
+  &--active,
+  &:active,
+  &:hover {
+    svg path {
+      fill: white;
+    }
+  }
+}
+
+.header__filtering {
+  display: flex;
+  align-items: center;
+  @include media-breakpoint-phone() {
+    order: 3;
+  }
+
+  .h-button {
+    &--active,
+    &:active,
+    &:hover {
+      color: white !important;
+      background: $alternate-color !important;
+      border-color: $alternate-color !important;
+    }
+  }
+}
+
+.header__auth {
+  border-left: 1px solid #e3ebed;
+  padding-left: 2rem;
+  margin-left: 1rem;
+}
+
+.navigation {
+  @include media-breakpoint-phone() {
+    order: 1;
+  }
+}
+
+.header__link {
+  color: $text-color;
+  &:hover {
+    color: $text-color-light;
+  }
+}
+
+.header__loading-bar {
+  position: absolute;
+  height: 3px;
+  background: $main-color;
+  background: linear-gradient(to right, $main-color, $alternate-color);
+}
+
+.nav-link__profile {
+  color: $text-color !important;
+  &:hover {
+    color: $text-color-light !important;
+  }
+}
+
 .h-sorting {
   color: white;
   font-size: 1.2rem;
   font-weight: 700;
   margin-left: 2rem;
   @include media-breakpoint-phone() {
-    margin-left: 1rem;
-  }
-}
-
-.h-filtering {
-  display: flex;
-  span {
-    display: flex;
-  }
-
-  &:hover,
-  .h-filtering--open {
-    cursor: pointer;
-    .filter--border,
-    .filter--outer {
-      fill: $alternate-color;
-      stroke: $alternate-color;
-    }
-    .filter--inner {
-      fill: white;
-      stroke: white;
-    }
-    .filter--shadow {
-      fill-opacity: 1;
-    }
+    display: none;
   }
 }
