--- a/src/modules/program-search/components/program-search-bar/program-search-bar.scss
+++ b/src/modules/program-search/components/program-search-bar/program-search-bar.scss
@@ -6,14 +6,12 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin: 0 10px;
 
   &__input {
     border: none;
     border-radius: 3px;
     box-sizing: border-box;
     outline: none;
-    margin: 0 10px;
     width: 100%;
     height: 35px;
     margin-right: 0;
@@ -24,6 +22,7 @@
   &__icon {
     cursor: pointer;
     color: white;
+    margin: 0 1rem;
     &--clear {
       color: $main-color;
       position: absolute;
