--- a/src/modules/program-search/components/program-search-popup/program-search-popup.scss
+++ b/src/modules/program-search/components/program-search-popup/program-search-popup.scss
@@ -5,7 +5,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 3rem;
+  top: 53px;
   min-height: 10rem;
   max-height: 37rem;
   overflow-y: auto;
