--- a/src/modules/program-search/components/program-search.scss
+++ b/src/modules/program-search/components/program-search.scss
@@ -22,7 +22,7 @@
     &__open {
       display: none;
       @include media-breakpoint-tablet() {
-        display: inline-block;
+        display: inline-flex;
       }
     }
 
@@ -72,7 +72,7 @@
 
       &__close {
         @include media-breakpoint-tablet() {
-          display: inline-block;
+          display: inline-flex;
           margin: 0 1rem;
         }
       }
