--- a/src/modules/programs/components/program-filterable-list/program-list-filter-container/program-list-filter-container.scss
+++ b/src/modules/programs/components/program-filterable-list/program-list-filter-container/program-list-filter-container.scss
@@ -5,6 +5,7 @@
   max-width: 300px;
   @include media-breakpoint-desktop() {
     position: fixed;
+    top: 68px;
     bottom: 0;
     right: 0;
     overflow-y: auto;
