--- a/src/modules/filter-pane/components/filter-pane/filter-pane.scss
+++ b/src/modules/filter-pane/components/filter-pane/filter-pane.scss
@@ -27,6 +27,10 @@
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
   height: 100%;
   overflow: auto;
+  position: fixed;
+  @include media-breakpoint-desktop() {
+    position: relative;
+  }
   @include media-breakpoint-phone() {
     width: 100%;
     box-shadow: none;
@@ -37,7 +41,7 @@
   @include media-breakpoint-desktop() {
     opacity: 0.5;
     background-color: #000;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
