--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,3 +9,5 @@ $program-status-active-color: $text-light-color;
 $program-status-investing-color: $primary-color;
 $program-status-withdrawing-color: $level-color-4;
 $program-status-ended-color: $text-dark-color;
+
+$panel-background-color: #1c2730;
