--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -10,4 +10,5 @@ $program-status-investing-color: $primary-color;
 $program-status-withdrawing-color: $level-color-4;
 $program-status-ended-color: $text-dark-color;
 
+$short-statistic-subheading-color: rgba(255, 255, 255, 0.3);
 $panel-background-color: #1c2730;
