--- a/src/pages/create-program/components/create-program-settings/create-program-settings.scss
+++ b/src/pages/create-program/components/create-program-settings/create-program-settings.scss
@@ -1,2 +1,45 @@
+@import "styles/_colors.scss";
+
 .create-program-settings {
+  &__form {
+    color: $text-light-color;
+  }
+
+  &__subheading {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 13px;
+
+    margin-bottom: 16px;
+    margin-top: 16px;
+
+    &:first-child {
+      margin-left: 2px;
+    }
+  }
+
+  &__fill-block {
+    padding-left: 87px;
+
+    padding-top: 10px;
+    padding-bottom: 60px;
+
+    &--with-border {
+      border-left: 2px solid $short-statistic-subheading-color;
+      margin-left: 8px;
+      padding-left: 76px;
+    }
+  }
+
+  &__block-number {
+    margin-right: 70px;
+
+    &:first-child {
+      // margin-right: 74px;
+    }
+  }
+
+  &__navigation {
+    margin-top: 80px;
+  }
 }
