--- a/src/shared/components/form/input-file/input-file.scss
+++ b/src/shared/components/form/input-file/input-file.scss
@@ -3,7 +3,7 @@
 .input-file__avatar {
   position: relative;
   text-align: center;
-  border: 1px solid $border-color;
+  border: 1px solid grey;
   border-radius: 4px;
 }
 
@@ -25,7 +25,7 @@
 
 .input-file__text--lighter {
   cursor: pointer;
-  color: $alternate-color;
+  color: white;
 }
 
 .input-file__text--small {
@@ -62,7 +62,7 @@
   background: rgba(255, 255, 255, 0.9);
   text-align: center;
   z-index: 1;
-  border: 5px dashed $border-color;
+  border: 5px dashed grey;
   box-sizing: border-box;
   font-size: 2rem;
 }
@@ -74,7 +74,7 @@
 }
 
 .dropzone__text--error {
-  color: $danger-color;
+  color: $negative-color;
 }
 
 .dropzone__info {
