GVW-45 edit broker choose markup

--- a/src/pages/create-program/components/create-program-broker/create-program-broker.scss
+++ b/src/pages/create-program/components/create-program-broker/create-program-broker.scss
@@ -57,7 +57,9 @@
   }
 
   &__navigation {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 100%;
 
     & .gv-btn {
       box-sizing: border-box;
