--- a/src/pages/create-program/components/create-program-settings/create-program-settings.scss
+++ b/src/pages/create-program/components/create-program-settings/create-program-settings.scss
@@ -109,26 +109,26 @@
   &__file-field-container {
     position: relative;
 
-    &:after {
-      display: inline-block;
-      content: "1";
-      width: 17px;
-      height: 17px;
-      position: absolute;
-      top: 26.5px;
-      right: -10px;
-      border-radius: 10px;
-      background-color: $level-color-1;
-      line-height: 17px;
-      font-size: 11px;
-      text-align: center;
-    }
+    // &:after {
+    //   display: inline-block;
+    //   content: "1";
+    //   width: 17px;
+    //   height: 17px;
+    //   position: absolute;
+    //   top: 26.5px;
+    //   right: -10px;
+    //   border-radius: 10px;
+    //   background-color: $level-color-1;
+    //   line-height: 17px;
+    //   font-size: 11px;
+    //   text-align: center;
+    // }
   }
 
   &__image {
     box-sizing: border-box;
-    width: 70px;
-    height: 70px;
+    width: 170px;
+    height: 170px;
     overflow: hidden;
 
     &-info {
