GVW-48 remove unnecessary comments

--- a/src/shared/components/form/input-file/input-file.scss
+++ b/src/shared/components/form/input-file/input-file.scss
@@ -38,8 +38,8 @@
   justify-content: center;
 
   .cropper-modal {
-    // background-color: white;
-    // opacity: 0.9;
+    background-color: white;
+    opacity: 0.9;
   }
 
   &.dropzone--active {
