GVW-61 move auth section email catching from manager to investor

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -13,3 +13,5 @@ $program-status-ended-color: $text-dark-color;
 $short-statistic-subheading-color: rgba(255, 255, 255, 0.3);
 $panel-background-color: #1c2730;
 $accent-color: $negative-color;
+
+$text-error: $negative-color;
