--- a/src/pages/auth/forgot-password/email-pending/email-pending.scss
+++ b/src/pages/auth/forgot-password/email-pending/email-pending.scss
@@ -7,14 +7,11 @@
 
   &__text {
     line-height: 24px;
+    color: $text-color;
   }
 
   &__resend {
     margin-top: 24px;
     margin-bottom: 30px;
-  }
-
-  &__navigation {
-    margin-top: auto;
   }
 }
