--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -14,4 +14,7 @@ $short-statistic-subheading-color: rgba(255, 255, 255, 0.3);
 $panel-background-color: #1c2730;
 $accent-color: $negative-color;
 
+$short-statistic-notice-color: rgba(255, 255, 255, 0.4);
+$table-background-subcolor: rgba(255, 255, 255, 0.02);
+
 $text-error: $negative-color;
