--- a/src/modules/table/components/filtering/filter.scss
+++ b/src/modules/table/components/filtering/filter.scss
@@ -4,20 +4,22 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  font-size: 13px;
+  padding: 5px;
+  //font-size: 13px;
 
   & + & {
     padding-left: 1.5rem;
   }
 
   &__label {
+    opacity: 0.5;
     letter-spacing: 0.2px;
     color: $text-color;
   }
 
   &__value {
     letter-spacing: 0.2px;
-    color: $text-color;
+    color: $text-accent-color;
     padding: 0 0.4rem;
   }
 
