--- a/src/modules/table/components/table.scss
+++ b/src/modules/table/components/table.scss
@@ -16,6 +16,7 @@ $padding: 33px;
 }
 
 .table {
+  padding-bottom: 16px;
   width: 100%;
   border-spacing: 0;
   .message {
@@ -41,7 +42,7 @@ $padding: 33px;
     justify-content: flex-end;
     width: 100%;
     align-items: center;
-    padding: 0 $padding/2 $padding/2;
+    padding: 10px $padding/2 $padding/2;
   }
 
   &__toggle {
@@ -183,7 +184,7 @@ $padding: 33px;
       font-size: $td-font-size;
     }
     &__toolbar {
-      padding: 0 $padding $padding;
+      padding: 10px $padding $padding;
     }
     &__toggle {
       display: flex;
