--- a/src/modules/profile/profile.scss
+++ b/src/modules/profile/profile.scss
@@ -14,6 +14,7 @@
     overflow: scroll;
   }
   &__left {
+    min-width: 23px;
     position: relative;
   }
 
@@ -22,7 +23,7 @@
   }
 
   &__row {
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
   }
