--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,3 +1,5 @@
+@import "styles/_sizes.scss";
+
 .dashboard {
   &__row {
     display: flex;
@@ -15,5 +17,11 @@
 
   &__assets {
     margin-top: 2rem;
+  }
+  &__buttons{
+    display: flex;
+  }
+  &__button{
+    padding-right: $padding-middle;
   }
 }
