Change multi-line-period to fund-asset-ratio

--- a/src/components/fund-asset-ratio/fund-assets-ratio.scss
+++ b/src/components/fund-asset-ratio/fund-assets-ratio.scss
@@ -2,7 +2,7 @@
 @import "styles/_sizes.scss";
 @import "styles/_breakpoint.scss";
 
-.multi-line-period {
+.fund-asset-ratio {
   display: block;
   position: relative;
 
@@ -34,7 +34,7 @@
     border-radius: 0.25rem;
     width: 100%;
 
-    .multi-line-period__value {
+    .fund-asset-ratio__value {
       height: 3px;
       border-radius: 0.25rem;
     }
