--- a/src/pages/dashboard/components/dashboard-portfolio-events/dashboard-portfolio-events.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-events/dashboard-portfolio-events.scss
@@ -3,8 +3,7 @@
 @import "styles/_breakpoint.scss";
 
 .dashboard-portfolio-events {
-  &,
-  & div {
+  &, & div {
     box-sizing: border-box;
   }
   flex: 1;
