--- a/src/pages/create-program/components/create-program-settings/create-program-settings.scss
+++ b/src/pages/create-program/components/create-program-settings/create-program-settings.scss
@@ -5,6 +5,23 @@
   margin-top: 40px;
   margin-left: 24px;
 
+  &__name {
+    display: inline-flex;
+    position: relative;
+    top: 3px;
+    width: 230px;
+    margin-right: 24px;
+
+    &-requirements {
+      font-size: 12px;
+      color: $label-color;
+      letter-spacing: 0.4px;
+      position: absolute;
+      top: 86px;
+      left: 0px;
+    }
+  }
+
   &__form {
     color: $text-light-color;
   }
