--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -8,7 +8,7 @@
   border-radius: 8px;
   background-color: $secondary-background-color;
   z-index: 1300;
-  max-height: calc(100vh - 100px);
+  //max-height: calc(100vh - 100px);
   overflow: auto;
 
   &-list {
