Edit create fund page

--- a/src/pages/create-fund/components/create-fund-settings/create-fund-settings.scss
+++ b/src/pages/create-fund/components/create-fund-settings/create-fund-settings.scss
@@ -361,6 +361,14 @@ $asset-height-mobile: $asset-height/$divider-text;
     padding: 0 $padding-small;
   }
   &__assets {
+    &:after {
+      content: " ";
+      background: linear-gradient(
+                      90deg,
+                      rgba($background-color, 0),
+                      $background-color
+      );
+    }
     padding-bottom: $padding-small;
     table {
       border-spacing: 0;
